Attempt to fix categories visibility in the sidebar.

--- a/web/app/themes/isto/resources/assets/styles/_woocomerce-global.pcss
+++ b/web/app/themes/isto/resources/assets/styles/_woocomerce-global.pcss
@@ -9,16 +9,16 @@
 }
 
 body:not(.term-ypatingi-pasiulymai) {
-    .wc-block-product-categories > .wc-block-product-categories-list {
-        li:first-child {
+    .wc-block-product-categories ul:first-of-type {
+        li:first-of-type {
             display: none;
         }
     }
 }
 
 .term-ypatingi-pasiulymai {
-    .wc-block-product-categories > .wc-block-product-categories-list {
-        li:not(:first-child) {
+    .wc-block-product-categories ul:first-of-type {
+        li:not(:first-of-type) {
             display: none;
         }
     }
